quorum/test/tests/TypeChecker/Pass/IntegerEquals.quorum
class Main
    action Main
        Integer t 
        t:SetValue(5)
        integer p = 5

        print t:Equals(6)
        print p:Equals(6)
    end
end