quorum/test/tests/TypeChecker/Fail/ImpAssignTextIntegerWrapped.quorum
class main
    action main
        integer i = 5
        text t = i
    end
end